#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([hello], [1.1], [jiankangshiye@aliyun.com])
AC_CONFIG_SRCDIR([mymain.c])
#AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE(hello, 1.1)
# Checks for programs.
AC_PROG_CC

# 使用静态库编译，需要此宏定义
AC_PROG_RANLIB
# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile head/Makefile)
